@@ -39,6 +39,7 @@ BinaryParserPage.label.browse1=B&rowse...
 BinaryParserPage.label.browse2=Br&owse...
 BinaryParserPage.label.cppfiltCommand=c++filt Command:
 BinaryParserPage.label.cygpathCommand=cygpath Command:
+BinaryParserPage.label.nmCommand=nm Command:
 
 AbstractErrorParserBlock.task.setErrorParser=Setting Error Parsers...
 ConvertProjectWizardPage.convertTo=Convert to C or C++
